--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "crypto": "^1.0.1",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.37.1",
+    "sqlite3": "^5.1.7"
   }
 }
